--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
     <title>Dragonfly Simulator</title>
   </head>
 
-  <body class="vh-100">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
     <div class="container-fluid p-0 m-0 h-100" id="root"></div>
