--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-
+    <link rel="manifest" crossorigin="use-credentials" href="manifest.json"/>
     <!-- First Bootstrap 5.2, followed by Bootstrap Icons 1.8.3, followed by Google Fonts -->
     <link
       rel="stylesheet"
